<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_portrait"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:background="@drawable/blue_circle"
        android:contentDescription="@string/user_avatar" />

    <EditText
        android:id="@+id/tv_user_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/shape_edit_all_circular"
        app:layout_constraintTop_toBottomOf="@+id/img_portrait"
        android:hint="@string/enter_one_user_name"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="10dp"
        android:autofillHints="username"
        android:inputType="phone" />

    <EditText
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/shape_edit_all_circular"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
        android:hint="@string/please_input_a_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:autofillHints="password" />

    <Button
        android:id="@+id/login"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_btn_all_circular"
        android:text="@string/login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/retrieve_password" />


    <CheckBox
        android:id="@+id/cb_remember_pass"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/tv_forget_pass"
        app:layout_constraintEnd_toStartOf="@id/tv_remember_pass"
        app:layout_constraintBottom_toBottomOf="@id/tv_forget_pass"/>

    <TextView
        android:id="@+id/tv_remember_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/tv_forget_pass"
        app:layout_constraintBottom_toBottomOf="@id/tv_forget_pass"
        app:layout_constraintStart_toEndOf="@+id/tv_forget_pass"
        app:layout_constraintEnd_toStartOf="@id/tv_register"
        android:text="@string/remember_password"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_forget_pass"
        app:layout_constraintBottom_toBottomOf="@id/tv_forget_pass"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        android:text="@string/new_user_registration" />

</androidx.constraintlayout.widget.ConstraintLayout>