<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:elevation="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_student_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_name"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/tv_student_id"
        app:layout_constraintStart_toEndOf="@+id/tv_student_id"/>

    <TextView
        android:id="@+id/tv_sign_in_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_name"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/tv_student_id"
        app:layout_constraintStart_toEndOf="@id/tv_student_name"/>

    <TextView
        android:id="@+id/tv_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datetime"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="14dp"
        android:textSize="14sp"
        android:textColor="@color/shenghui"
        app:layout_constraintTop_toBottomOf="@id/tv_student_id"
        app:layout_constraintStart_toStartOf="@id/tv_student_id"
        app:layout_constraintBottom_toTopOf="@+id/line1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/na"
        android:id="@+id/tv_location"
        android:textSize="14sp"
        android:textColor="@color/shenghui"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/tv_datetime"
        app:layout_constraintStart_toEndOf="@id/tv_datetime"
        app:layout_constraintBottom_toBottomOf="@id/tv_datetime"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/qianhui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/absenteeism"
        android:textSize="16sp"
        android:textColor="@color/theme"
        android:gravity="center"
        android:background="@drawable/shape_btn_slight_circular"
        app:layout_constraintTop_toTopOf="@+id/tv_student_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_datetime"/>

</androidx.constraintlayout.widget.ConstraintLayout>