<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:elevation="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datetime"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_sign_in_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_code"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/tv_datetime"
        app:layout_constraintStart_toEndOf="@+id/tv_datetime"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_name"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="14dp"
        android:textSize="14sp"
        android:textColor="@color/shenghui"
        app:layout_constraintTop_toBottomOf="@+id/tv_datetime"
        app:layout_constraintStart_toStartOf="@+id/tv_datetime"
        app:layout_constraintBottom_toTopOf="@+id/line1"/>

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="64dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/attendance"
        android:textSize="16sp"
        android:textColor="@color/theme"
        android:gravity="center"
        android:background="@drawable/shape_btn_slight_circular"
        app:layout_constraintTop_toTopOf="@+id/tv_datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/qianhui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>