<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.joincourse.JoinCourseActivity">

    <TextView
        android:id="@+id/tv_join_course_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_the_course"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/tv_add_course_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/please_enter_the_course_code"
        app:layout_constraintTop_toBottomOf="@+id/tv_join_course_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/shape_edit_all_circular"
        android:textSize="20sp"
        android:autofillHints="加课码"
        android:inputType="text" />

    <Button
        android:id="@+id/determine"
        android:layout_width="120dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_btn_all_circular"
        android:layout_marginBottom="120dp"
        android:text="@string/determine"/>

</androidx.constraintlayout.widget.ConstraintLayout>