<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mapleleaves.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_courseManagementDialogFragment"
            app:destination="@id/courseManagementDialogFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mapleleaves.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.example.mapleleaves.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />

    <fragment
        android:id="@+id/navigation_placeFragment"
        android:name="com.example.mapleleaves.ui.place.PlaceFragment"
        android:label="PlaceFragment"
        tools:layout="@layout/fragment_place"/>
    <dialog
        android:id="@+id/courseManagementDialogFragment"
        android:name="com.example.mapleleaves.ui.course.CourseManagementDialogFragment"
        android:label="CourseManagementDialogFragment" >
        <argument
            android:name="courseId"
            app:argType="long"
            android:defaultValue="-1L" />
        <argument
            android:name="identity"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="studentId"
            app:argType="long"
            android:defaultValue="-1L" />
    </dialog>
</navigation>