<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_edit_all_circular"
        android:hint="@string/enter_one_user_name"
        android:padding="10dp"
        android:inputType="phone"
        android:autofillHints="userName" />

    <EditText
        android:id="@+id/et_password_first"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/shape_edit_all_circular"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name"
        app:layout_constraintStart_toStartOf="@+id/et_user_name"
        app:layout_constraintEnd_toEndOf="@id/et_user_name"
        android:hint="@string/please_input_a_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/et_password_second"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/shape_edit_all_circular"
        app:layout_constraintTop_toBottomOf="@+id/et_password_first"
        app:layout_constraintStart_toStartOf="@+id/et_user_name"
        app:layout_constraintEnd_toEndOf="@+id/et_user_name"
        android:hint="@string/please_enter_your_password_again"
        android:inputType="textPassword"
        android:padding="10dp"
        android:autofillHints="password" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/et_password_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_btn_all_circular"
        android:text="@string/register"
        android:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>