<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="6dp"
    android:layout_margin="4dp"
    android:elevation="10dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="6dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageCardView"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:id="@+id/courseImage"
                android:background="@drawable/cherry"
                android:contentDescription="@string/coursePicture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="centerCrop"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/courseName"
            android:text="@string/course_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_margin="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/imageCardView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/otherButton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/courseDesc"
            android:text="@string/course_desc"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/courseName"
            app:layout_constraintStart_toEndOf="@id/imageCardView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/studentCount"
            android:text="@string/student_count"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/courseDesc"
            app:layout_constraintStart_toEndOf="@id/imageCardView"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/otherButton"
            android:contentDescription="@string/other"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>